--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.16"
+env_logger = "0.9.0"
 clap = { version = "3.1.8", features = ["derive"] }
 lazy_static = "1.4.0"
 rand = "0.8.5"
 regex = "1.5.5"
+indicatif = "0.17.0-rc.10"
